Try to use a turn manager, not complete

--- a/src/main/resources/styles/HackerTheme.css
+++ b/src/main/resources/styles/HackerTheme.css
@@ -1,30 +1,22 @@
-/*
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to edit this template
-*/
-/* 
-    Created on : 9 ene. 2022, 12:06:24
-    Author     : kevin
-*/
 .root {
     -fx-background-image: url(/images/matrixBG.jpg);
     -fx-background-size: 1000 800;
     -fx-background-position: center center;
-    -fx-font-family: "Consolas";
+    -fx-font-family: "JetBrains Mono";
 }
 
 .text-id {
-    -fx-font-family: "Consolas";
+    -fx-font-family: "JetBrains Mono";
     -fx-font-weight: bold;
     -fx-font-smoothing-type: lcd;
-    -fx-font-size: 30;
+    -fx-font-size: 20;
     -fx-text-fill: white;
     -fx-fill: white;
 }
 
 .button{
-    -fx-font-family: "Consolas";
-    -fx-font-size: 30;
+    -fx-font-family: "JetBrains Mono";
+    -fx-font-size: 25;
     -fx-text-fill: white;
     -fx-background-color: #4CAF50;
     -fx-background-radius: 30 0 30 0;
@@ -43,7 +35,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 }
 
 .grid{
-    -fx-font-family: "Consolas";
+    -fx-font-family: "JetBrains Mono";
     -fx-font-size: 40;
     -fx-background-color: #99ff99;
     -fx-border-color: #00cc66;
